--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@
 /* Authors must use order only for visual, not logical, reordering of content. Style sheets that use order to perform logical reordering are non-conforming. */
 main { display: flex; }
 main > article { order: 2; min-width: 12em; flex:1; }
-main > nav     { order: 1; width: 200px; }
+main > nav     { order: 1; width: 200px; background-color: black; color: white; }
 main > aside   { order: 3; width: 200px; }
 
 @media all and (max-width: 600px) {
