--- a/main.css
+++ b/main.css
@@ -1,16 +1,1 @@
-/* source https://www.w3.org/TR/css-flexbox-1/#order-accessibility */
-/* Authors must use order only for visual, not logical, reordering of content. Style sheets that use order to perform logical reordering are non-conforming. */
-main { display: flex; }
-main > article { order: 2; min-width: 12em; flex:1; }
-main > nav     { order: 1; width: 200px; background-color: black; color: white; }
-main > aside   { order: 3; width: 200px; }
-
-@media all and (max-width: 600px) {
-  /* Too narrow to support three columns */
-  main { flex-flow: column; }
-  main > article, main > nav, main > aside {
-    /* Return them to document order */
-    order: 0; width: auto;
-  }
-}
-/* end https://www.w3.org/TR/css-flexbox-1/#order-accessibility */
+@media (orientation: portrait) { #grid { display: grid; /* The rows, columns and areas of the grid are defined visually * using the grid-template-areas property. Each string is a row, * and each word an area. The number of words in a string * determines the number of columns. Note the number of words * in each string must be identical. */ grid-template-areas: "title stats" "score stats" "board board" "ctrls ctrls"; /* The way to size columns and rows can be assigned with the * grid-template-columns and grid-template-rows properties. */ grid-template-columns: auto 1fr; grid-template-rows: auto auto 1fr auto; } } @media (orientation: landscape) { #grid { display: grid; /* Again the template property defines areas of the same name, * but this time positioned differently to better suit a * landscape orientation. */ grid-template-areas: "title board" "stats board" "score ctrls"; grid-template-columns: auto 1fr; grid-template-rows: auto 1fr auto; } } /* The grid-area property places a grid item into a named * area of the grid. */ #title { grid-area: title } #score { grid-area: score } #stats { grid-area: stats } #board { grid-area: board } #controls { grid-area: ctrls }
