--- a/main.css
+++ b/main.css
@@ -6,3 +6,19 @@
 .wrapper > div {
   flex: 1 1 200px;
 }
+/*end flexbox*/
+.box1 
+  background-color: red;
+}
+.box2 
+  background-color: orange;
+}
+.box3 
+  background-color: yellow;
+}
+.box4 
+  background-color: green;
+}
+.box5 
+  background-color: blue;
+}
