--- a/main.css
+++ b/main.css
@@ -8,17 +8,17 @@
 }
 /*end flexbox*/
 .box1 
-  background-color: red;
+  background: red;
 }
 .box2 
-  background-color: orange;
+  background: orange;
 }
 .box3 
-  background-color: yellow;
+  background: yellow;
 }
 .box4 
-  background-color: green;
+  background: green;
 }
 .box5 
-  background-color: blue;
+  background: blue;
 }
