--- a/main.css
+++ b/main.css
@@ -11,6 +11,19 @@
 /* end flexbox */
 /* css grid for testing */
 /* based off CSS Grid Layout https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout 17 April 2018 */
+* {box-sizing: border-box;}
+.wrapper {
+  max-width: 940px;
+  margin: 0 auto;
+}
+
+.wrapper > div {
+  border: 2px solid rgb(233,171,88);
+  border-radius: 5px;
+  background-color: rgba(233,171,88,.5);
+  padding: 1em;
+  color: #d9480f;
+}
 .wrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
