--- a/main.css
+++ b/main.css
@@ -55,17 +55,14 @@
   grid-row: 4;
 }
 .gc1gr1 {
-  grid-column: 1;
+  grid-column: 1 / 3;;
   grid-row: 1;
-  background-color: yellow;
 }
 .gc1gr2 {
   grid-column: 1;
   grid-row: 2;
-  background-color: yellow;
 }
 .gc1gr3 {
   grid-column: 1;
   grid-row: 3;
-  background-color: yellow;
 }
