--- a/main.css
+++ b/main.css
@@ -71,3 +71,8 @@
   grid-column: 1;
   grid-row: 2;
 }
+.screen911wide {
+  background: url('/wireframes/backdrop911screen.png');
+  grid-column: 1/4;
+  grid-row: 1;
+}
