--- a/main.css
+++ b/main.css
@@ -73,6 +73,8 @@
 }
 .screen911wide {
   background: url('/wireframes/backdrop911screen.png');
+  background-repeat: no-repeat;
+  background-size: 100% auto;
   grid-column: 1/4;
   grid-row: 1;
 }
