--- a/main-backup1.css
+++ b/main-backup1.css
@@ -16,7 +16,6 @@
   max-width: 940px;
   margin: 0 auto;
 }
-
 .wrapper > div {
   border: 2px solid rgb(233,171,88);
   border-radius: 5px;
@@ -74,7 +73,21 @@
 .screen911wide {
   background: url('/wireframes/backdrop911screen.png');
   background-repeat: no-repeat;
-  background-size: 100% auto;
+  object-fit: fill;
+  /* https://css-tricks.com/almanac/properties/o/object-fit/ */
+  color: white;
   grid-column: 1/4;
+  grid-row: 1;
+}
+.wireframe1 {
+  grid-column: 1/4;
+  grid-row: 1;
+}
+.wireframe2 {
+  grid-column: 3/4;
+  grid-row: 1;
+}
+.wireframe3 {
+  grid-column: 1;
   grid-row: 1;
 }
