--- a/main.css
+++ b/main.css
@@ -29,6 +29,29 @@
   grid-gap: 10px;
   grid-auto-rows: minmax(100px, auto);
 }
+
+.wrapper-phone {
+  max-width: 300px;
+  margin: 0 auto;
+}
+.wrapper-phone > div {
+  border: 2px solid rgb(233,171,88);
+  border-radius: 5px;
+  background-color: rgba(233,171,88,.5);
+  padding: 1em;
+  color: #d9480f;
+}
+.wrapper-phone {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+}
+
+
+
+
+
 .one {
   grid-column: 1 / 3;
   grid-row: 1;
