--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@
   grid-gap: 10px;
   grid-auto-rows: minmax(100px, auto);
 }
-
+/* To better illustrate mobile phone settings */
 .wrapper-phone {
   max-width: 400px;
   margin: 0 auto;
@@ -43,14 +43,10 @@
 }
 .wrapper-phone {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   grid-gap: 10px;
-  grid-auto-rows: minmax(100px, auto);
+  grid-auto-rows: minmax(75px, auto);
 }
-
-
-
-
 
 .one {
   grid-column: 1 / 3;
