--- a/main.css
+++ b/main.css
@@ -47,7 +47,7 @@
   grid-gap: 10px;
   grid-auto-rows: minmax(75px, auto);
 }
-
+/* end wrapper phone */
 .one {
   grid-column: 1 / 3;
   grid-row: 1;
