--- a/main.css
+++ b/main.css
@@ -20,14 +20,16 @@
   border: 2px solid rgb(233,171,88);
   border-radius: 5px;
   background-color: rgba(233,171,88,.5);
-  padding: 10em;
+  padding: 1em;
   color: #d9480f;
 }
 .wrapper {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  /*grid-template-columns: repeat(3, 1fr);*/
+  grid-template-columns: repeat(2, 1fr);
   grid-gap: 10px;
-  grid-auto-rows: minmax(100px, auto);
+  /*grid-auto-rows: minmax(100px, auto);*/
+  grid-auto-rows: minmax(200px, auto);
 }
 /* To better illustrate mobile phone settings */
 .wrapper-phone {
