--- a/main.css
+++ b/main.css
@@ -19,7 +19,7 @@
 .wrapper > div {
   border: 2px solid rgb(233,171,88);
   border-radius: 5px;
-  background-color: rgba(233,171,88,.5);
+  /* background-color: rgba(233,171,88,.5); */
   padding: 1em;
   color: #d9480f;
 }
