--- a/main.css
+++ b/main.css
@@ -20,6 +20,7 @@
   border: 2px solid rgb(233,171,88);
   border-radius: 5px;
   /* background-color: rgba(233,171,88,.5); */
+  background-color: white;
   padding: 1em;
   color: #d9480f;
 }
