--- a/main.css
+++ b/main.css
@@ -30,7 +30,7 @@
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 10px;
   /*grid-auto-rows: minmax(100px, auto);*/
-  grid-auto-rows: minmax(200px, auto);
+  /* grid-auto-rows: minmax(200px, auto); */
 }
 /* To better illustrate mobile phone settings */
 .wrapper-phone {
